changed to flask

--- a/.gitignore
+++ b/.gitignore
@@ -20,13 +20,9 @@ lib64/
 parts/
 sdist/
 var/
-wheels/
-pip-wheel-metadata/
-share/python-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
-MANIFEST
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -48,10 +44,8 @@ htmlcov/
 nosetests.xml
 coverage.xml
 *.cover
-*.py,cover
 .hypothesis/
 .pytest_cache/
-cover/
 
 # Translations
 *.mo
@@ -62,7 +56,6 @@ cover/
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
-media
 
 # Flask stuff:
 instance/
@@ -89,10 +82,11 @@ celerybeat-schedule
 # SageMath parsed files
 *.sage.py
 
-# Environments
+# dotenv environment variables file
 .env
-.venv
-env/
+.flaskenv
+
+# virtualenv
 venv/
 ENV/
 env.bak/
@@ -115,21 +109,3 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
-
-# pytype static type analyzer
-.pytype/
-
-# Cython debug symbols
-cython_debug/
-
-# VS Code
-.vscode/
-
-# IntelliJ
-.idea/
-
-# Jupyter
-.ipynb_checkpoints
-
-# macOS
-.DS_Store
