🔧 fix: add .vscode/settings.json to the repository

--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,4 @@ app/templates/portfoli_testing_something.html
 app/static/covers.zip
 testing_model.py
 app/tkinter_manga_backup.db
+.vscode/settings.json
