--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ MarkupSafe==2.1.3
 mysql-connector-python==8.3.0
 openai==1.11.1
 packaging==23.2
+pillow==10.2.0
 pydantic==2.6.0
 pydantic_core==2.16.1
 PyMySQL==1.1.0
