🚀 feat: streamline Dockerfile setup and dependencies installation, migrating from zerotier to tailscale
This commit updates the Dockerfile to set the PYTHONPATH environment variable
for correct Python imports and optimize the COPY commands to leverage Docker
cache. It also adjusts the installation of dependencies in the Dockerfile to
include necessary packages for the application. Additionally, it ensures that
openrc can run in Docker by creating the required directory and file. Lastly,
the commit updates the CORS middleware configuration to allow specific origins
and adjusts import paths in the application files for consistency.

--- a/app/database_module/docker-compose.yml
+++ b/app/database_module/docker-compose.yml
@@ -11,20 +11,17 @@ services:
     devices:
       - /dev/net/tun
     environment:
-      - NETWORK_NUMBER
+      - OAUTH_CLIENT_SECRET
       - VAULT_ADDR
       - VAULT_ROLE_ID_shiro_chan_project
       - VAULT_SECRET_ID_shiro_chan_project
     networks:
-      - external-containers
       - phpmyadmin_gpt_db
     volumes:
       - ./app:/app  # Maps the app directory on your host to /app in your container
       - /home/ubuntu/docker/logs:/app/logs
 
 networks:
-  external-containers:
-    external: true
   phpmyadmin_gpt_db:
     external: true
 volumes:
