--- a/app/database_module/Dockerfile
+++ b/app/database_module/Dockerfile
@@ -1,33 +1,29 @@
-# Set the base image to Alpine Linux
 FROM alpine:3.17.3
 
-# Update package list and install bash, ZeroTier, Python, and required dependencies
+# Update package list and install dependencies
 RUN apk update && \
-    apk add --no-cache bash zerotier-one python3 py3-pip && \
+    apk add --no-cache bash python3 py3-pip curl iptables iproute2 openrc && \
     apk add build-base python3-dev libffi-dev
 
+# Ensure openrc can run in Docker
+RUN mkdir -p /run/openrc && \
+    touch /run/openrc/softlevel
+
+# Add the edge repository for Tailscale
+# Install Tailscale from the edge testing repository
+RUN echo "@edge http://dl-cdn.alpinelinux.org/alpine/edge/main" >> /etc/apk/repositories && \
+    echo "@edge http://dl-cdn.alpinelinux.org/alpine/edge/community" >> /etc/apk/repositories && \
+    apk add --no-cache tailscale@edge
 
 # Copy your FastAPI application and other necessary files
 COPY ./app /app
 
-# Set the default shell to bash
-SHELL ["/bin/bash", "-c"]
-
-
-# Set the working directory to /app
+# Set the working directory and install Python dependencies
 WORKDIR /app
-
-# Copy the requirements.txt file into the container
 COPY requirements.txt /app/
-
-# Install Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the startup script into the container
+# Prepare and use the startup script
 COPY startup.sh /startup.sh
-
-# Give execution rights on the startup script
 RUN chmod +x /startup.sh
-
-# Use the startup script as the entry point
 ENTRYPOINT ["/startup.sh"]
