--- a/app/database_module/requirements.txt
+++ b/app/database_module/requirements.txt
@@ -1,22 +1,22 @@
 annotated-types==0.6.0
-anyio==4.2.0
-certifi==2023.11.17
+anyio==4.3.0
+certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
 exceptiongroup==1.2.0
-fastapi
+fastapi==0.110.0
 h11==0.14.0
 idna==3.6
 mysql-connector-python==8.3.0
 packaging==21.3
-pydantic==2.5.3
-pydantic_core==2.14.6
+pydantic==2.6.3
+pydantic_core==2.16.3
 pyparsing==3.0.9
 requests==2.31.0
 retrying==1.3.3
 six==1.16.0
-sniffio==1.3.0
-starlette==0.36.2
-typing_extensions==4.9.0
-urllib3==2.1.0
-uvicorn
+sniffio==1.3.1
+starlette==0.36.3
+typing_extensions==4.10.0
+urllib3==2.2.1
+uvicorn==0.27.1
