🔧 fix: update environment variables in docker-compose file and refactor code for Flask environment handling, adding dev testing table

--- a/app/database_module/docker-compose.yml
+++ b/app/database_module/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - VAULT_ADDR
       - VAULT_ROLE_ID_shiro_chan_project
       - VAULT_SECRET_ID_shiro_chan_project
+      - FLASK_ENV
     networks:
       - phpmyadmin_gpt_db
     volumes:
