feat: Add Content Security Policy and cover download functionality
Add Content Security Policy to set security headers in the response.
Update the response header 'Content-Security-Policy' with specific policies.
Identify and download missing covers for manga entries.
Update the database for successful cover downloads.
Fix my ip for vault variables

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,9 @@
         ".",
         "-p",
         "test_*.py"
-    ]
+    ],
+    "sonarlint.connectedMode.project": {
+        "connectionId": "shiroepl",
+        "projectKey": "ShiroePL_EasternTalesShelf"
+    }
 }
